fix flex wrap in css

--- a/app/style.css
+++ b/app/style.css
@@ -113,6 +113,7 @@ body {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .project a {
